--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1rZiXl562q7aVyk1kJ2nO85YBAq8ixTiw/view" target="_blank" class="btn"><span>Resume</span>
+            <a href="#" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
@@ -134,32 +134,20 @@
 
   <h1 class="heading"><i class="fas fa-graduation-cap"></i> My <span>Education</span></h1>
 
-    <p class="qoute">Education is not the learning of facts, but the training of the mind to think.</p>
+    <p class="qoute">Tak pernah Jenuh dalam menimba ilmu</p>
 
     <div class="box-container">
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
+        <img draggable="false" src="./assets/images/educat/pens.jpg " alt="">
         </div>
         <div class="content">
-        <h3>Bachelor of Engineering in Information Technology</h3>
-        <p>Zeal College of engineering and research | SPPU</p>
-        <h4>2020-2024 | Pursuing</h4>
+        <h3>Politeknik Elektronika Negeri Surabaya</h3>
+        <p>Teknik Informatika</p>
+        <h4>2024 to Present</h4>
         </div>
     </div>
-
-    <div class="box">
-      <div class="image">
-      <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
-      </div>
-      <div class="content">
-      <h3>HSC Science | Informatic Practices</h3>
-      <p>Shri  L. G. Haria Multipurpose School | CBSE</p>
-      <h4>2018-2020 | Completed</h4>
-      </div>
-    </div>
-
 </div>
 </section>
 <!-- education section ends -->
@@ -168,39 +156,23 @@
 <!-- work project section starts -->
 <section class="work" id="work">
 
-  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
+  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span></span></h2>
 
   <div class="box-container">
 
-    <!-- <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
-      <div class="content">
-        <div class="tag">
-        <h3>Portfolio Website</h3>
-        </div>
-        <div class="desc">
-          <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
-          <div class="btns">
-            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
 </div>
 
-<div class="viewall">
+<!-- <div class="viewall">
   <a href="/projects" class="btn"><span>View All</span>
     <i class="fas fa-arrow-right"></i>
-</a>
+</a> -->
 </div>
 
 </section>
 <!-- work project section ends -->
 
 <!-- experience section starts -->
-<section class="experience" id="experience">
+<!-- <section class="experience" id="experience">
 
   <h2 class="heading"><i class="fas fa-briefcase"></i> Experience </h2>
 
@@ -279,15 +251,15 @@
     </div>
   </div>
 
-  <div class="morebtn">
+  <!-- <div class="morebtn">
     <a href="/experience" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
-  </div>
+  </div> -->
 
 </div>
 
-</section>
+</section> -->
 <!-- experience section ends -->
 
 <!-- contact section starts -->
