modifi projec and contact

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta name="keywords" content="Minas Sahiddin, portfolio, jigar, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
-    <meta name="description" content="Welcome to Jigar's Portfolio. Full-Stack Web Developer and Android App Developer" /> -->
+    <!-- <meta name="keywords" content="Minas Sahiddin, portfolio, Minas, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
+    <meta name="description" content="Welcome to Minas's Portfolio. Full-Stack Web Developer and Android App Developer" /> -->
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Font Awesome -->
@@ -34,7 +34,7 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#work">Work</a></li>
             <li><a href="#experience">Experience</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <!-- <li><a href="#contact">Contact</a></li> -->
             </ul>
         </nav>
 </header>
@@ -53,12 +53,12 @@
     </a>
     <div class="socials">
         <ul class="social-icons">
-          <!-- <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/jigar-sable/" target="_blank"><i class="fab fa-linkedin"></i></a></li>  -->
+          <!-- <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/Minas-sable/" target="_blank"><i class="fab fa-linkedin"></i></a></li>  -->
           <li><a class="github" aria-label="GitHub" href="https://github.com/Aiboo13" target="_blank"><i class="fab fa-github"></i></a></li>
-          <!-- <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/jigar_sable" target="_blank"><i class="fab fa-twitter"></i></a></li> -->
+          <!-- <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/Minas_sable" target="_blank"><i class="fab fa-twitter"></i></a></li> -->
           <!-- <li><a class="telegram" aria-label="Telegram" href="https://t.me/lifecode5" target="_blank"><i class="fab fa-telegram-plane"></i></a></li> -->
           <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/sahoddot?igsh=MTJnNGZ0N2V3cWhzcQ=="><i class="fab fa-instagram" target="_blank"></i></a></li>
-          <!-- <li><a class="dev" aria-label="Dev" href="https://dev.to/jigarsable" target="_blank"><i class="fab fa-dev"></i></a></li> -->
+          <!-- <li><a class="dev" aria-label="Dev" href="https://dev.to/Minassable" target="_blank"><i class="fab fa-dev"></i></a></li> -->
         </ul>
       </div>
     </div>
@@ -251,11 +251,11 @@
     </div>
   </div>
 
-  <!-- <div class="morebtn">
+  <div class="morebtn">
     <a href="/experience" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
-  </div> -->
+  </div>
 
 </div>
 
@@ -263,7 +263,7 @@
 <!-- experience section ends -->
 
 <!-- contact section starts -->
-<section class="contact" id="contact">
+<!-- <section class="contact" id="contact">
   
   <h2 class="heading"><i class="fas fa-headset"></i> Get in <span>Touch</span></h2>
 
@@ -299,8 +299,9 @@
     </form>
   </div>
   </div>
-</section>
+</section> -->
 <!-- contact section ends -->
+
 
 
 <!-- footer section starts -->
@@ -309,7 +310,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
+          <h3>Minas's Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
@@ -320,26 +321,26 @@
           <a href="#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
           <a href="#education"><i class="fas fa-chevron-circle-right"></i> education</a>
           <a href="#work"><i class="fas fa-chevron-circle-right"></i> work</a>
-          <a href="#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
+          <!-- <a href="#experience"><i class="fas fa-chevron-circle-right"></i> experience</a> -->
       </div>
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 XXX-XXX-XXXX</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
+          <p> <i class="fas fa-phone"></i>+62 831-4130-2936</p>
+          <p> <i class="fas fa-envelope"></i>minassahiddin@gmail.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Nganjuk, Jawa Timur</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
-              <a href="https://github.com/jigar-sable" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
-              <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-              <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
-              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <!-- <a href="https://www.linkedin.com/in/Minas-sable" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a> -->
+              <a href="https://github.com/Aiboo13" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
+              <a href="minassahiddin@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
+              <!-- <a href="https://twitter.com/Minas_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a> -->
+              <!-- <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a> -->
           </div>
       </div>
   </div>
 
-  <!-- <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> Minas Sahiddin</a></h1> -->
+  <!-- <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/Minas-sable"> Minas Sahiddin</a></h1> -->
 
 </section>
 <!-- footer section ends -->
